--- a/photoshare/photoshare/PhotoGalleryViewController.xib
+++ b/photoshare/photoshare/PhotoGalleryViewController.xib
@@ -9,7 +9,7 @@
                 <outlet property="addPhotoBtn" destination="vdz-P4-fXc" id="oJn-7P-YgD"/>
                 <outlet property="collectionview" destination="cfs-wx-kRA" id="bit-AM-4eu"/>
                 <outlet property="deletePhotoBtn" destination="T8g-Aa-75e" id="Xt9-zt-9kP"/>
-                <outlet property="sharePhotoBtn" destination="PCF-J7-j1f" id="HGu-S5-0Yb"/>
+                <outlet property="sharePhotoBtn" destination="PCF-J7-j1f" id="Hff-Kg-QwH"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
@@ -54,9 +54,6 @@
                     <state key="normal" title="Share">
                         <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </state>
-                    <connections>
-                        <action selector="sharePhoto:" destination="-1" eventType="touchUpInside" id="diB-2g-xra"/>
-                    </connections>
                 </button>
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" id="cfs-wx-kRA">
                     <rect key="frame" x="0.0" y="96" width="320" height="284"/>
